--- a/WebApplication1/WebApplication1/appsettings.json
+++ b/WebApplication1/WebApplication1/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DbConnString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=APBDlab10;Integrated Security=True"
-  }
+  "AllowedHosts": "*"
 }
