--- a/WebApplication1/WebApplication1/appsettings.json
+++ b/WebApplication1/WebApplication1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnString": "Data Source = db-mssql; Initial Catalog = 2019SBD; Integrated Security = True; Encrypt = False"
+  }
 }
